examples/invalid/projects/bad_abi_profile_mismatch/main.ns
mod cpu Main {
  fn main() {
    const value: i64 = 1;
    print(value);
  }
}
